--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ GITHUB_SECRET=6ba8713d9f16045f947fe5a807901f48f17f1178
 GOOGLE_ID=95233303970-9hiq7n19ns8619gcr41tlsf1sme72m7v.apps.googleusercontent.com
 GOOGLE_SECRET=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
 NEXTAUTH_SECRET=arzena
-BACKEND_URL=http://localhost:5000/api/v1
+BACKEND_URL=https://next-auth-backend-nine.vercel.app/api/v1
+# BACKEND_URL=http://localhost:5000/api/v1
